--- a/src/app/homepage/hero/hero.component.html
+++ b/src/app/homepage/hero/hero.component.html
@@ -14,8 +14,8 @@
       </div>
 
       <!-- Arrows -->
-      <!-- <button class="arrow prev" (click)="prevSlide()"><i class="fa-solid fa-chevron-left"></i></button>
-      <button class="arrow next" (click)="nextSlide()"><i class="fa-solid fa-chevron-right"></i></button> -->
+      <button class="arrow prev" (click)="prevSlide()"><i class="fa-solid fa-chevron-left"></i></button>
+      <button class="arrow next" (click)="nextSlide()"><i class="fa-solid fa-chevron-right"></i></button>
     </div>
 
     <!-- Latest News Right -->
