--- a/src/app/homepage/partners/partners.component.css
+++ b/src/app/homepage/partners/partners.component.css
@@ -14,7 +14,7 @@ body {
 .clients h2 {
   font-size: 30px;
   font-weight: 800;
-  color: #009999;
+  color: #00569A;
   text-transform: uppercase;
   text-align: center;
 }
