--- a/src/app/lab/Smart_Factory_Center/SFC.component.html
+++ b/src/app/lab/Smart_Factory_Center/SFC.component.html
@@ -4,7 +4,7 @@
 
   <!-- Section 1: Image left, content right -->
   <section class="im-section">
-    <img src="assets/labs/smartfactory/AI & ML Based Smartfactory.jpg" alt="Smart Factory Overview">
+    <img src="assets/bannerimage/smart3.jpg" alt="Smart Factory Overview">
     <div class="im-content">
       <h2>Overview</h2>
       <p>
@@ -21,7 +21,7 @@
 
   <!-- Section 2: Image right, content left -->
   <section class="im-section reverse">
-    <img src="assets\labs\smartfactory\SFC.jpg" alt="Smart Factory Technologies">
+    <img src="assets\bannerimage\smart1.jpg" alt="Smart Factory Technologies">
     <div class="im-content">
       <h2>Services Offered</h2>
       <ul>
@@ -35,7 +35,7 @@
 
   <!-- Section 3: Image left, content right (multi-column competency & tools) -->
   <section class="im-section section-3">
-    <img src="assets/labs/smartfactory/collaborative Robots.jpg" alt="Smart Factory Skills & Tools">
+    <img src="assets/bannerimage/smart2.jpg" alt="Smart Factory Skills & Tools">
     <div class="im-content">
       <h2>Competency & Tools</h2>
 
