--- a/src/app/lab/inovative_manufacturing/IM.component.html
+++ b/src/app/lab/inovative_manufacturing/IM.component.html
@@ -8,20 +8,20 @@
     <div class="im-content">
       <h2>Overview</h2>
       <p>
-        Future-ready digital manufacturing hub at TANSAM, powered by Siemens software and advanced tools. Enables creation of complex components, legacy part recreation, and workflow optimization. Integrates digital tools with physical processes for precision and innovation.
+        Innovators in this Era are emerging fast Such innovative product can only be made possible by using 3d Printers. In Tamil Nadu Smart Manufacturing Centre for Excellence providing wide range of Reverse Engineering & Additive Manufacturing end to end solutions using Siemens Software to Start Ups, MSME and Skill training Programs.
       </p>
       <p>
-        <b>Reverse Engineering:</b> 3D scanning with Calibry Scanner, digital reconstruction of parts, parametric modeling using Siemens NX and Solid Edge, and rapid design-to-production integration.
+        <b>Reverse Engineering:</b> 	Any Complex Components can be converted in digital model by using 3d Scanner (Calibry mini–Hand held 3d Scanner) in which it captures the primitive of the component and the gives output as exact Replication of the product. Further Digital reconstruction of the parts, Parametric modeling using Seimens NX and Solid Edge
       </p>
       <p>
-        <b>3D Metal Printing:</b> Markforged metal printing for strong, lightweight parts, rapid prototyping, complex geometries, and seamless CAD-to-print workflow via Siemens platforms, reducing lead time and material waste.
+        <b>3D Metal Printing:</b> In additive Manufacturing, creating a prototype in 3d Printers with layer by layer method .Mark-forged a metal printer prints Complex components in strong, lightweight parts, rapid prototyping, complex geometries, and seamless CAD-to-print workflow via Digital platforms, reducing lead time and material waste.
       </p>
     </div>
   </section>
 
   <!-- Section 2: Image right, content left -->
   <section class="im-section reverse">
-    <img src="assets/labs/smartfactory/collaborative.jpg" alt="IM">
+    <img src="assets/bannerimage/Innova.jpg" alt="IM">
     <div class="im-content">
       <h2>Services Offered</h2>
       <ul>
