--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -74,7 +74,7 @@ h2 {
 
 .contact-form p {
   font-size: 14px;
-  color: #009688;
+  color: #00569a;
   /* background: #009688; */
   font-family: "Afacad Flux", serif;
 }
@@ -93,7 +93,7 @@ textarea, input {
 }
 
 textarea::placeholder, input::placeholder {
-  color: #009688;
+  color: #00569a;
 }
 
 textarea:focus, input:focus {
@@ -151,6 +151,7 @@ button svg {
   display: block;
   transform-origin: center center;
   transition: transform 0.3s ease-in-out;
+
 }
 .svg-wrapper-1 span{
   font-family: "Afacad Flux", serif;
@@ -158,6 +159,7 @@ button svg {
 
 button:hover .svg-wrapper {
   animation: fly-1 0.6s ease-in-out infinite alternate;
+  
 }
 
 button:hover svg {
