--- a/src/app/homepage/newsletter/newsletter.component.css
+++ b/src/app/homepage/newsletter/newsletter.component.css
@@ -44,9 +44,9 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background: linear-gradient(135deg, #009999, #c4f1f1);
+    background: linear-gradient(135deg, #00569a, #c4f1f1);
     padding: 40px;
-  
+
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     animation: fadeInUp 1s ease-in-out;
     max-width: 100%;
