--- a/src/app/homepage/newsletter/newsletter.component.html
+++ b/src/app/homepage/newsletter/newsletter.component.html
@@ -1,4 +1,4 @@
-<!-- <div class="newsletter-container">
+<div class="newsletter-container">
   <div class="newsletter-content">
     <h2 class="newsletter-title">Subscribe to Our Newsletter</h2>
     <p class="newsletter-text">
@@ -18,4 +18,4 @@
       alt="Newsletter Illustration"
     />
   </div>
-</div> -->
+</div>
