--- a/src/app/internship/internship.component.css
+++ b/src/app/internship/internship.component.css
@@ -7,7 +7,7 @@
 }
 .title h2{
     font-family: "Afacad Flux", sans-serif;
-    color: #009999;
+    color: #00569a;
     font-size: 26px;
 }
 /* Card Container */
