--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -133,6 +133,9 @@
             <li class="no-arrow">
               <a [routerLink]="['Naan_mudhlvan/up_skilling']">Naan Mudhalvan</a>
             </li>
+            <li class="no-arrow">
+              <a [routerLink]="['skilling']">Skilling Ecosystem</a>
+            </li>
           </ul>
         </li>
 
@@ -143,7 +146,7 @@
           (click)="toggleDropdown('media')"
         >
           <span class="active">
-            Our Strength
+            Social Presence
             <i
               class="fa-solid"
               [ngClass]="{
