added academia and courseware component

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -120,7 +120,7 @@
           (click)="toggleDropdown('naanmudhalvan')"
         >
           <span class="active" (click)="closeMenu()">
-            Skilling Programs
+            Skilling
             <i
               class="fa-solid"
               [ngClass]="{
@@ -134,7 +134,13 @@
               <a [routerLink]="['Naan_mudhlvan/up_skilling']">Naan Mudhalvan</a>
             </li>
             <li class="no-arrow">
-              <a [routerLink]="['skilling']">Skilling Ecosystem</a>
+              <a [routerLink]="['skilling']">Corporate</a>
+            </li>
+            <li class="no-arrow">
+              <a [routerLink]="['academia']">Academia</a>
+            </li>
+            <li class="no-arrow">
+              <a [routerLink]="['courseware']">Courseware</a>
             </li>
           </ul>
         </li>
