--- a/src/app/lab/Predictive_Engineering/PE.component.html
+++ b/src/app/lab/Predictive_Engineering/PE.component.html
@@ -8,14 +8,11 @@
     <div class="im-content">
       <h2>Overview</h2>
       <p>
-        At the forefront of engineering innovation, the Center for Predictive Engineering Analytics (CPEA) Lab empowers industries and academia to revolutionize the way products are designed, analyzed, and optimized. We bring the digital twin to life—leveraging advanced CAE simulations to predict real-world behaviour, reduce prototyping costs, and accelerate product development.<br>
-        <b>What We Do</b><br>The CPEA Lab integrates state-of-the-art engineering simulation technologies including:<br>
-        •	Finite Element Analysis (FEA)<br>
-        •	Computational Fluid Dynamics (CFD)<br>
-        •	Multibody Dynamics (MBD)<br>
-        •	Thermal, Structural, and Vibration Analyses<br>
-        •	Motion and Kinematics Simulations<br>
-        •	Optimization and Durability Assessments<br>
+        At the forefront of engineering innovation, the Predictive Engineering Analytics Research Lab empowers industries and academia to revolutionize the way products are designed, analyzed, and optimized. We bring the digital twin to life—leveraging advanced CAE simulations to predict real-world behaviour, reduce prototyping costs, and accelerate product development.<br>
+        <b>What We Do</b><br>This Research Lab integrates state-of-the-art engineering simulation technologies.<br>
+        By harnessing the power of digital twins, we enable virtual testing and validation of designs under real-world conditions, helping to identify potential issues before they arise. This proactive approach not only enhances product reliability but also shortens development cycles and reduces time-to-market.<br>
+        <b>Why It Matters</b><br>In today’s competitive landscape, the
+
         Whether it is designing next-generation vehicles, refining aerospace structures, or simulating complex industrial machinery, we offer a full spectrum of predictive capabilities that bring unmatched accuracy and efficiency to every stage of product development.
 
       </p>
@@ -46,12 +43,12 @@
         <div class="list-column">
           <h3>Competency & Skills</h3>
           <ul>
-            <li>Finite Element Analysis</li>
-            <li>Multibody Dynamic Simulation</li>
-            <li>Computational Fluid Dynamics</li>
-            <li>Kinematic Simulation</li>
-            <li>Dynamic Simulation</li>
-            <li>Ststic simulation</li>
+            <li>Finite Element Analysis (FEA)</li>
+            <li>Multibody Dynamic Simulation (MBD)</li>
+            <li>Computational Fluid Dynamics (CFD)</li>
+            <li>Motion & Kinematic Simulation</li>
+            <li>Structural, and Vibration Analyses</li> 
+            <li>Optimization and Durability Assessments</li>
           </ul>
         </div>
 
