--- a/src/app/lab/Smart_Factory_Center/SFC.component.html
+++ b/src/app/lab/Smart_Factory_Center/SFC.component.html
@@ -8,13 +8,13 @@
     <div class="im-content">
       <h2>Overview</h2>
       <p>
-        The Smart Factory Department at TANSAM leverages cutting-edge Industry 4.0 technologies to deliver advanced simulation and digital twin solutions using Siemens Process Simulate and Siemens Plant Simulation. We specialize in robotic simulation, factory layout optimization, and virtual commissioning to help industries visualize, test, and validate manufacturing processes before implementation. Our services enable predictive maintenance, real-time monitoring, and performance optimization of complex production systems.
+        The Smart Factory Research Lab leverages cutting-edge Industry 4.0 technologies to deliver advanced simulation and digital twin solutions using Siemens Process Simulate and Siemens Plant Simulation tools. We specialize in robotic simulation, factory layout optimization, and virtual commissioning to help industries visualize, test, and validate manufacturing processes before implementation. Our services enable predictive maintenance, real-time monitoring, and performance optimization of complex production systems.
       </p>
       <p>
         By replicating real-world operations in a virtual environment, we help reduce downtime, minimize risks, and enhance productivity. We offer tailored solutions for MSMEs, OEMs, and large enterprises to support lean manufacturing and sustainable practices. Through high-fidelity modelling and data-driven insights, we streamline operations and accelerate innovation.
       </p>
       <p>
-        Our department plays a key role in transforming conventional factories into smart, flexible, and efficient production ecosystems. We focus on optimizing resource utilization, improving throughput, and identifying bottlenecks in manufacturing workflows. By integrating simulation with IoT and automation, we enable seamless industrial integration. Our team is committed to supporting the complete digital transformation of manufacturing. At TANSAM, we empower industries to build the factories of the future today.
+        The research lab plays a critical role in transforming conventional factories into smart, flexible, and efficient production ecosystems. We focus on optimizing resource utilization, improving throughput, and identifying bottlenecks in manufacturing workflows. By integrating simulation with IoT and automation, we enable seamless industrial integration. Our team is committed to supporting the complete digital transformation of manufacturing. At TANSAM, we empower industries to build the factories of the future today.
       </p>
     </div>
   </section>
@@ -60,7 +60,7 @@
             <li>Robo DK</li>
             <li>TIA Portal</li>
             <li>Dobot Scratch Programming</li>
-            <li>Simtalk Coding</li>
+            
           </ul>
         </div>
       </div>
